k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-service
spec:
  type: NodePort
  selector:
    app: churn-api
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
